# lbr_fri_ros2_stack

./: README.md
.github/workflows/: build-ubuntu-24.04-fri-2.6.yml
lbr_bringup/lbr_bringup/: ros2_control.py
lbr_demos/lbr_demos_advanced_cpp/doc/: lbr_demos_advanced_cpp.rst
lbr_demos/lbr_demos_advanced_py/doc/: lbr_demos_advanced_py.rst
lbr_demos/lbr_demos_cpp/doc/: lbr_demos_cpp.rst
lbr_demos/lbr_moveit/doc/: lbr_moveit.rst
lbr_demos/lbr_moveit_cpp/: CMakeLists.txt  package.xml
lbr_demos/lbr_moveit_cpp/doc/: lbr_moveit_cpp.rst
lbr_demos/lbr_moveit_cpp/launch/: end_velocity.launch.py  iopublisher.launch.py
lbr_demos/lbr_moveit_cpp/src/: Incremental_PID_velocity.cpp  end_velocity.cpp  iopublisher.cpp  position_PID_velocity.cpp  spiral_motion.cpp
lbr_description/gazebo/: lbr_gazebo.xacro
lbr_description/ros2_control/: lbr_controllers.yaml  lbr_system_config.yaml  lbr_system_interface.xacro
lbr_fri_idl/: CMakeLists.txt
lbr_fri_idl/msg/: LBRAnalogCommand.msg  LBRBooleanCommand.msg  LBRCommand.msg  LBRDigitalCommand.msg  LBRState.msg  SpindleControl.msg
lbr_fri_idl/test/: test_command_interfaces.cpp
lbr_fri_ros2/: CMakeLists.txt
lbr_fri_ros2/src/: async_client.cpp  command_guard.cpp
lbr_fri_ros2/test/: test_io_command_interfaces.cpp  test_position_command.cpp
lbr_fri_ros2_stack/: repos-fri-2.6.yaml
lbr_ros2_control/: CMakeLists.txt
lbr_ros2_control/config/: lbr_controllers.yaml  lbr_system_interface.xacro  lbr_system_parameters.yaml
lbr_ros2_control/doc/: lbr_ros2_control.rst
lbr_ros2_control/plugin_description_files/: controllers.xml
lbr_ros2_control/src/: system_interface.cpp
(+35 files in other folders)
